# dualscope123

./: dualscope.orig  setup.cfg  setup.py
dualscope123/: csvlib.py  icons.py  main.py  utils.py
dualscope123/probes/: audio.py  eth_nios.py  generic.py  rigol.py
