[metadata]
name = dualscope123
version = 1.0rc1
author = Giuseppe Venturini and others
author_email = giuseppe.g.venturini@ieee.org
license = GPLv3
description = A versatile oscilloscope + spectrum analyzer in Python/QWT
keywords = oscilloscope, scope, spectrum, data
url = http://github.com/ggventurini/dualscope123
long_description = file: pypi_description.rst, CHANGES.rst
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Education
	Intended Audience :: Science/Research
	License :: OSI Approved :: GPL v3 License
	Operating System :: POSIX
	Operating System :: POSIX :: Linux
	Operating System :: MacOS
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7

[options]
packages = find:
zip_safe = False
install_requires = numpy; pyaudio
include_package_data = True
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3

[options.entry_points]
console_scripts = dualscope123 = dualscope123.main:main
